tests/spec/non_conformant/errors/extend/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/extend"
#[allow(unused)]
use super::rsass;

mod placeholder;

mod selector;
